# LegalStatuteAnalysis

./: .env.example  .gitignore  CLAUDE.md  README.md  TEST_RESULTS.md  pyproject.toml  requirements.txt  使用說明書.md
Useless_tools/: check_pdf_quality.py  convert_qa_to_article_mapping.py  convert_qa_to_html.py  run_llm_parsing.py  simple_pdf_converter.py  stage3_pdf_generator.py
backend/api/: main.py
backend/models/: schemas.py
backend/services/: data_service.py
docs/: README.md
docs/api/: core-api.md  llm-providers.md  models-api.md
docs/archive/: questions_template.md
docs/dev/: architecture.md  code-standards.md  development-guide.md
docs/user/: advanced-usage.md  quick-start.md  troubleshooting.md
example/LegalStatuteAnalysis/: README.md  law_config.json  requirements.txt
example/LegalStatuteAnalysis/scripts/: test_core_embedding.py
example/LegalStatuteAnalysis/src/core_embedding/: __init__.py
example/LegalStatuteAnalysis/src/pdf_converter/: __init__.py  cli.py
frontend/: index.html  question.html
frontend/css/: main.css
frontend/js/: api.js  main.js  question.js
scripts/: batch_print.py  browser_print_guide.py  convert_pdf.py  format_embedding_results.py  generate_complete_law_notes.py  stage1_data_processor.py
src/core_embedding/: gemini_embedding_matcher.py
src/main/python/: __init__.py
src/main/python/api/: __init__.py
src/main/python/core/: embedding_matcher.py
src/main/python/models/: __init__.py
src/main/python/services/: __init__.py
src/main/python/utils/: __init__.py
src/main/resources/config/: .env.example  config.json
src/models/: data_loaders.py  law_models.py
src/parsing/: llm_parser.py
src/pdf_converter/: core.py
tools/scripts/: batch_generate_pdf_reports.py  batch_process_exams.py  convert_embedded_results_to_html.py  convert_embedded_results_to_html.py.backup  convert_qa_format.py  convert_qa_to_article_mapping.py  fixed_pdf_converter.py  law_articles_converter.py  prepare_laws_csv.py  process_qa_mapping.py  process_single_exam.py  reprocess_civil_law.py  reprocess_single_exam.py  run_complete_pipeline.py  run_core_embedding.py  run_core_with_gemini.py  run_embedding_matching.py  stage2_html_generator.py  test_pdf_generation.py  web_server.py
